--- a/ISM/frontend-chat/package.json
+++ b/ISM/frontend-chat/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^6.1.0",
+    "cookies-next": "^2.1.1",
     "eciesjs": "^0.3.16",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "ethers": "^6.2.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
